fix button background on safari

--- a/_sass/feedback.scss
+++ b/_sass/feedback.scss
@@ -214,6 +214,7 @@
     justify-content: space-between;
 
     button {
+      background-color: transparent;
       -webkit-appearance: none;
       cursor: pointer;
       outline: none;
